--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "bulma-calendar": "^5.0.1",
+    "bulma-extensions": "^3.0.0",
     "formsy-react": "^1.1.4",
     "formsy-react-components": "^1.0.0",
     "react": "^16.5.1",
