--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma": "^0.7.1",
-    "bulma-calendar": "^5.0.1",
-    "bulma-extensions": "^3.0.0",
+    "bootstrap": "^4.1.3",
     "formsy-react": "^1.1.4",
     "formsy-react-components": "^1.0.0",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "react": "^16.5.1",
+    "react-16-bootstrap-date-picker": "^5.1.2",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
