--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "popper": "^1.0.1",
     "react": "^16.5.1",
     "react-16-bootstrap-date-picker": "^5.1.2",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
