--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "sweetalert2-react": "^0.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
